BUG-FIX: fixed alignments on profile & settings pages

--- a/Frontend/Static/styles/Settings.css
+++ b/Frontend/Static/styles/Settings.css
@@ -1,8 +1,5 @@
 body {
     font-family: Arial, sans-serif;
-    background: #f2f2f2;
-    margin: 0;
-    width: 100%;
     height: 100%
   }
 
@@ -72,12 +69,12 @@ body {
 
   .sidebar-container {
     position: absolute;
-    left: 0;
-    top: 20%; 
-    height: calc(100% - 80px);
-    width: 200px;
+    left: 22px;
+    top: 30%; 
+    bottom:-799px;
+    width: 248px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    height: 210%;
+  
   } 
 
   .main-content {
@@ -112,10 +109,12 @@ body {
 
   .card {
     background: #fff;
-    border-radius: 10px;
+    border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin: 5% auto;
+    margin-top: 7%;
+    margin-bottom: 3%;
+    margin-left: 27%;
     max-width: 60%;
   }
 
@@ -227,46 +226,49 @@ body {
     background: #d32f2f;
   }
 
-  /*footer*/
+  /* Footer */
+footer {
+  background-color: rgb(240, 240, 240);
+  color: rgb(10, 10, 10);
+  text-align: center;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
 
-  footer {
-    background: #333;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+.footer-left {
+  flex: 1;
+  text-align: left;
+  margin-bottom: 10px;
+}
 
-  .footer-left {
-    width: 80%;
-  }
+.footer-left h3 {
+  margin-bottom: 10px;
+}
 
-  .footer-left h3 {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    margin-left: 0.5em;
-  }
+.footer-left p {
+  margin: 0;
+  font-size: 70%;
+}
 
-  .footer-left p {
-    margin-bottom: 0.5rem;
-    margin-left: 0.5em;
-  }
+.footer-left p + p {
+  margin-top: 0.5em;
+}
 
-  .footer-right a {
-    display: block; 
-    color: #fff;
-    margin-top: 1em;
-  } 
 
-  .footer-right a:hover {
-    text-decoration: underline;
-  }
+.footer-right {
+  margin-top: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  font-size: 70%;
+}
 
+.footer-right a {
+  color: rgb(6, 6, 6);
+  text-decoration: none;
+}
   @media (max-width: 600px) {
 
     footer {
